--- a/styles.css
+++ b/styles.css
@@ -1,113 +1,124 @@
-:root {
-    --color-a: #DAA6FF;
-    --secondary-color: #47f1ab;
-    --tertiary-color: #bfeeff;
-    --fourthiary-color: #f4ff7a;
-}
-
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+
 }
 
 body {
-    font-family: 'Azeret Mono', monospace;
-    background-color: #e5eaea;
-}
-
-h1{
-    font-size: 64px;
-    letter-spacing: -8px;
-    font-weight: 500;
-}
-.box-container{
-    position: relative;
-    display: flex;
-    margin-top: 24px;
-    justify-content: center;
-}
-.box-grid h1{
     color: #000000;
-    position: absolute;
-    left: 64px;
-    bottom: 12px;
+    font-family: sans-serif;
+    padding: 3em;
 }
-.box-grid{
-    position: relative;
+
+.header {
+    height: 6rem;
     display: grid;
-    grid-template-columns: 50px 50px 50px;
-    grid-template-rows: 50px 50px 50px;
+    grid-template:
+            "A B"
+            "C C" / 1fr 3fr;
+
 }
 
-.box {
-    background-color: black;
-    transition: 0.3s;
-    width: auto;
-    height: auto;
-}
-@media screen and (min-width: 400px){
-    .box-grid{
-        grid-template-columns: 50px 50px 50px 50px 50px 50px 50px 50px;
-        grid-template-rows: 50px 50px 50px;
+@media screen and (min-width: 768px) {
+    body {
+        grid-template:
+            "A B"
+            "A C" / 1fr 3fr;
     }
 }
 
-@media screen and (min-width: 500px){
-    .box-grid{
-        grid-template-columns: 75px 75px 75px 75px 75px 75px 75px 75px;
-        grid-template-rows: 75px 75px 75px;
+
+.grid {
+    display: grid;
+}
+
+.grid--1x3 {
+    grid-template-rows: 1fr 1fr 1fr;
+    justify-content: space-around;
+}
+
+@media screen and (min-width: 768px) {
+    .grid--1x3 {
+        display: flex;
+        padding: 2rem 3rem 2rem 3rem;
+        grid-template-columns: 1fr 1fr 1fr;
+        justify-content: center;
     }
 }
 
-@media screen and (min-width: 672px){
-    .box-grid{
-        grid-template-columns: 75px 75px 75px 75px 75px 75px 75px 75px;
-        grid-template-rows: 100px 100px 100px;
-    }
+
+
+#a {
+    background-color: #6a49ff;
+    grid-area: A;
 }
 
-@media screen and (min-width: 780px){
-    .box-grid{
-        grid-template-columns: 100px 100px 100px 100px 100px 100px 100px;
-        grid-template-rows: 100px 100px 100px;
-    }
+#b {
+    background-color: #31f9b3;
+    display: flex;
+    justify-content: right;
+    grid-area: B;
 }
 
-@media screen and (min-width: 880px){
-    .box-grid{
-        grid-template-columns: 100px 100px 100px 100px 100px 100px 100px 100px;
-        grid-template-rows: 100px 100px 100px;
-    }
+.c {
+    background-color: #ff83c9;
+    grid-area: C;
 }
 
-.box:nth-child(7n+0) {
-    border-radius: 100px 0 0 0;
-}
-.box:nth-child(3n+1) {
-    border-radius: 0 100px 0 0;
-}
-.box:nth-child(5n+2) {
-    border-radius: 0 0 100px 0;
-}
-.box:nth-child(16n+0) {
-    border-radius: 100px 0 100px 0;
-}
-.box:nth-child(16n+8) {
-    border-radius: 0 100px 100px 0;
-}
-.box:nth-child(9n+0) {
-    border-radius: 0 0 0 100px;
+.d {
+    background-color: #f2f931;
+    height: 250px;
+    width: 250px;
+
 }
 
-.box:nth-child(4n+0) {
-    background-color: #DAA6FF;
+.e {
+    background-color: #b4ffd2;
+    height: 250px;
+    width: 250px;
 }
-.box:nth-child(4n+1) {
-    background-color: #47f1ab;
+
+.f {
+    background-color: rgba(49, 89, 249, 0.94);
+    height: 250px;
+    width: 250px;
 }
-.box:nth-child(4n+2) {
-    background-color: #bfeeff;
+
+.table_container{
+    background: #f93195;
 }
-.box:nth-child(4n+3) {
-    background-color: #f4ff7a;
+
+table {
+    width: 100%;
+}
+
+#films {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+#films td, #films th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#films tr:nth-child(even){background-color: #f2f2f2;}
+
+#films tr:hover {background-color: #ddd;}
+
+#films th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #04AA6D;
+    color: white;
+}
+
+th {
+    colspan: 2;
 }
