--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: "iA Writer Quattro V";
-    src: url(iAWriterQuattroV.ttf);
+    font-family: "iA Writer Quattro V", "iA Writer Quattro V Italic";
+    src: url(iAWriterQuattroV.ttf), url(iAWriterQuattroV-Italic.ttf);
 }
 
 :root {
@@ -13,14 +13,12 @@
     box-sizing: border-box;
 }
 
-html, body {
 
-}
-
+/* Typography */
 body {
     color: #000000;
     font-family: "iA Writer Quattro V", sans-serif;
-    padding: 3em;
+    font-size: 14px;
 }
 
 .header {
@@ -40,7 +38,7 @@ body {
     }
 }
 
-
+/* Grids */
 .grid {
     display: grid;
 }
@@ -97,6 +95,7 @@ body {
     width: 250px;
 }
 
+/* Tables */
 table {
     border-collapse: collapse;
     width: 100%;
@@ -123,7 +122,36 @@ th {
     colspan: 2;
 }
 
+
+/* Testimonials */
+.testimonials_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.testimonial {
+    width: 80%;
+    max-width: 400px;
+    min-width: 200px;
+    border-radius: 12px;
+    padding: 2rem;
+    margin: 2rem;
+    box-shadow: 0 0 20px #ded6d6;
+}
+
 .testimonial_image{
-    width: 150px;
+    width: 100%;
     border-radius: 100%;
+}
+
+.testimonial blockquote {
+    font-style: italic;
+}
+
+.testimonial blockquote::before {
+    content: open-quote;
+}
+.testimonial blockquote::after {
+    content: close-quote;
 }
