--- a/components/grids.html
+++ b/components/grids.html
@@ -1,22 +1,12 @@
-<div class="header">
-  <div id="a">LOGO</div>
-  <div id="b">ABOUT WORK CONTACT</div>
-</div>
-<div class="c grid grid--1x3">
-  <div class="d">D</div>
-  <div class="e">E</div>
-  <div class="f">F</div>
+
+<div class="grid grid--1x2">
+  <div style="height: 100px; background: lightslategray"></div>
+  <div style="height: 100px; background: #afeaaf;"></div>
 </div>
 
-<div class="c grid grid--1x3">
-  <div class="d">D</div>
-  <div class="e">E</div>
-  <div class="f">F</div>
-</div>
 
-<div class="c grid grid--1x3">
-  <div class="d">D</div>
-  <div class="e">E</div>
-  <div class="f">F</div>
+<div class="grid grid--1x3">
+  <div style="height: 100px; background: mediumpurple"></div>
+  <div style="height: 100px; background: salmon;"></div>
+  <div style="height: 100px; background: lightgreen;"></div>
 </div>
-
