--- a/components/cards.html
+++ b/components/cards.html
@@ -1,7 +1,9 @@
-<div class="card testimonial">
-  <div class="grid grid--1x2">
-    <img class="testimonial__image" src="images/Person1.png" alt="Picture of a girl smiling behind a watermelon">
-    <span class="testimonial">
+<div class="grid grid--1x3">
+    <div class="card testimonial">
+        <div class="grid grid--1x2 grid--inner">
+            <img class="testimonial__image" src="images/Person1.png"
+                 alt="Picture of a girl smiling behind a watermelon">
+            <span class="testimonial">
         <blockquote class="testimonial__quote">William knocked it out of the park with his performance at our last event.Some of our clients actually think they got to meet the real deal and our sales has skyrocketed since.</blockquote>
             <div class="testimonial--signature">
                 <h2 class="testimonial__person">Chris Fox</h2>
@@ -9,6 +11,40 @@
             </div>
         </span>
 
-  </div>
+        </div>
+
+    </div>
+
+    <div class="card testimonial">
+        <div class="grid grid--1x2 grid--inner">
+            <img class="testimonial__image" src="images/Person1.png"
+                 alt="Picture of a girl smiling behind a watermelon">
+            <span class="testimonial">
+        <blockquote class="testimonial__quote">William knocked it out of the park with his performance at our last event.Some of our clients actually think they got to meet the real deal and our sales has skyrocketed since.</blockquote>
+            <div class="testimonial--signature">
+                <h2 class="testimonial__person">Chris Fox</h2>
+                <h3 class="testimonial__company">CEO at Mighty Schools.</h3>
+            </div>
+        </span>
+
+        </div>
+
+    </div>
+
+    <div class="card testimonial">
+        <div class="grid grid--1x2 grid--inner">
+            <img class="testimonial__image" src="images/Person1.png"
+                 alt="Picture of a girl smiling behind a watermelon">
+            <span class="testimonial">
+        <blockquote class="testimonial__quote">William knocked it out of the park with his performance at our last event.Some of our clients actually think they got to meet the real deal and our sales has skyrocketed since.</blockquote>
+            <div class="testimonial--signature">
+                <h2 class="testimonial__person">Chris Fox</h2>
+                <h3 class="testimonial__company">CEO at Mighty Schools.</h3>
+            </div>
+        </span>
+
+        </div>
+
+    </div>
 
 </div>
