--- a/components/tables.html
+++ b/components/tables.html
@@ -1,26 +1,32 @@
-<table id="films">
-    <tr>
-        <th colspan="3">Films</th>
-    </tr>
-    <tr>
-        <td>The Beggar and the Thief (2019)</td>
-        <td>Lead (Ian)</td>
-        <td>Universial Pictures</td>
-    </tr>
-    <tr>
-        <td>Zombies, Get Me Outta Here! (2018)</td>
-        <td>Supporting (Jim)</td>
-        <td>Focus Features</td>
-    </tr>
-    <tr>
-        <td>Colgate Commersial (2016)</td>
-        <td>Extra (Dad in park)</td>
-        <td>Space City
-            Hosting</td>
-    </tr>
-    <tr>
-        <td>Protein Pro (2002)</td>
-        <td>Co-presenter</td>
-        <td>TV-Shop</td>
-    </tr>
-</table>
+
+<div class="card">
+
+    <div class="card__header">Films</div>
+
+    <div class="card__body"></div>
+    <table id="films">
+        <tr>
+            <td>The Beggar and the Thief (2019)</td>
+            <td>Lead (Ian)</td>
+            <td>Universial Pictures</td>
+        </tr>
+        <tr>
+            <td>Zombies, Get Me Outta Here! (2018)</td>
+            <td>Supporting (Jim)</td>
+            <td>Focus Features</td>
+        </tr>
+        <tr>
+            <td>Colgate Commersial (2016)</td>
+            <td>Extra (Dad in park)</td>
+            <td>Space City
+                Hosting
+            </td>
+        </tr>
+        <tr>
+            <td>Protein Pro (2002)</td>
+            <td>Co-presenter</td>
+            <td>TV-Shop</td>
+        </tr>
+    </table>
+    </div.>
+</div>
