update footer and clean up some of the code.

--- a/components/tables.html
+++ b/components/tables.html
@@ -1,10 +1,4 @@
-
-<div class="card">
-
-    <div class="card__header">Films</div>
-
-    <div class="card__body"></div>
-    <table id="films">
+<table id="films">
         <tr>
             <td>The Beggar and the Thief (2019)</td>
             <td>Lead (Ian)</td>
@@ -16,7 +10,7 @@
             <td>Focus Features</td>
         </tr>
         <tr>
-            <td>Colgate Commersial (2016)</td>
+            <td>Colgate Commercial (2016)</td>
             <td>Extra (Dad in park)</td>
             <td>Space City
                 Hosting
@@ -28,5 +22,3 @@
             <td>TV-Shop</td>
         </tr>
     </table>
-    </div.>
-</div>
