--- a/styles.css
+++ b/styles.css
@@ -256,7 +256,7 @@ table tr:nth-child(even) {
 
 /* todo figure out why space-between is not working on min-width 1024 */
 
-.testimonial span {
+.testimonial--container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
